# mopt_CT_1_linear_search

./: .gitignore  LICENSE  README.md  Report.tex  lab1_linear_search.py
lab1/: __init__.py  config.yaml  functions.py  run.py
lab2/: __init__.py  config.yaml  functions.py  run.py
lab3/: __init__.py  config.yaml  functions.py  run.py
legacy/lab1_original/: README.md
optimlib/: README.md  pyproject.toml
optimlib/src/optimlib/: __init__.py  exceptions.py
optimlib/src/optimlib/core/: __init__.py  base.py  callbacks.py  config.py
optimlib/src/optimlib/experiment/: __init__.py  benchmark.py  runner.py  serialization.py
optimlib/src/optimlib/functions/: __init__.py  base.py
optimlib/src/optimlib/optimizers/: __init__.py  adaptive.py  gradient.py  univariate.py
optimlib/src/optimlib/utils/: __init__.py  numerics.py  registry.py  validation.py
optimlib/src/optimlib/visualization/: __init__.py  plotting.py
optimlib/tests/: test_adaptive.py  test_callbacks.py  test_config_runner_plotting.py  test_gradient.py  test_univariate.py
outputs/tables/: experiment_summary.csv  good_unimodal_quadratic_table.csv  good_unimodal_quadratic_table.tex  multimodal_strategy_comparison.csv  plateau_asymmetric_unimodal_table.csv  plateau_asymmetric_unimodal_table.tex  second_special_unimodal_table.csv  second_special_unimodal_table.tex
