[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimlib"
version = "0.2.0"
description = "Optimization methods library for a three-lab optimization course."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "scipy>=1.10",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", ".."]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pandas.*",
    "scipy.*",
    "seaborn.*",
    "yaml.*",
]
ignore_missing_imports = true
